--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ title: Ethan Fast
     I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Here I post about some of the things I create. Follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
   </div>
   
-  <h1>Recent Writings</h1>
+  <h1>Writings</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }} : </span><a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{ post.url }}">{{ post.title }}</a><span>{{ post.date | date_to_string }} </span></li>
     {% endfor %}
   </ul>
 
