--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@ title: Home
     I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Here I post about some of the things I create. Follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
   </div>
   
-  <h1>Writings</h1>
+  <h1>WRITINGS</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><a href="{{ post.url }}">{{ post.title }}</a><span>{{ post.date | date_to_string }} </span></li>
     {% endfor %}
   </ul>
 
-  <h1>Open Source Projects</h1>
+  <h1>OPEN SOURCE PROJECTS</h1>
   <ul class="posts">
     <li><a href="http://github.com/ejhfast/Gajure/">Gajure:</a> Genetic algorithm framework in Clojure.</li>
     <li><a href="http://github.com/ejhfast/Clustering-in-Haskell/">K-means:</a> A k-means library in Haskell.</li>
