--- a/404.html
+++ b/404.html
@@ -18,14 +18,14 @@
 
 <div class="site">
   <div class="title">
-    <a class="big" href="/">Ethan Fast</a>
+    <a class="big" href="/">ETHAN FAST</a>
   </div>
   <div class="about">
 	    I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Here I post about some of the things I create. Follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
   </div>
   
   <h1>Page Not Found</h1>
-  <p> Sorry -- I'm something of a VPS gypsy. Your link probably got lost in translation. </p>
+  <p> Sorry, I'm something of a VPS gypsy. Your link probably got lost in translation. </p>
   
   <div class="footer">
     <div class="contact">
