--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div id="home">
   
   <div class="about">
-    I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Here I post about some of the things I create. Follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
+    I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Here I post about some of the things I create. Read more about me on my <a href="/academic.html">academic</a> and <a href="professional.html">professional</a> pages. Follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
   </div>
   
   <h1>WRITINGS</h1>
