--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
     <a class="big" href="/">ETHAN FAST</a>
   </div>
   <div class="about">
-	    I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Here I post about some of the things I create. Follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
+    I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Here I post about some of the things I create. Read more about me on my <a href="/academic.html">academic</a> and <a href="professional.html">professional</a> pages. Follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
   </div>
   
   <h1>Page Not Found</h1>
