--- a/404.html
+++ b/404.html
@@ -19,11 +19,12 @@
 
 <div class="site">
   <div class="title">
-    <a class="big" href="/">ETHAN FAST</a>
+     Ethan Fast <a href="/">wrote this.</a>
   </div>
-  <div class="about">
-    I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Here I post about some of the things I create. Read more about me on my <a href="/academic.html">academic</a> and <a href="professional.html">professional</a> pages. Follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
-  </div>
+  <div id="content">
+    <div class="about">
+      I'm a CS PhD student at Stanford, an entrepreneur, and a writer. Read more about me on my <a href="/academic.html">academic</a> and <a href="professional.html">professional</a> pages. Subscribe to <a href="/atom.xml">my feed</a>, or follow me on <a href="http://twitter.com/unignorant">twitter</a> or <a href="http://github.com/ejhfast">github.</a>
+    </div>
   
   <h1>Page Not Found</h1>
   <p> Sorry, I'm something of a VPS gypsy. Your link probably got lost in translation. </p>
@@ -41,6 +42,7 @@
         <a href="http://twitter.com/unignorant/">twitter.com/unignorant</a><br />
       </p>
     </div>
+  </div>
   </div>
 </div>
 
