--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@ title: Home
 
 <div id='top_nav'>
   <div class='title'>
-    <div id='cloud'>
+    <a href="http://github.com/Proxino/TypedJS"><div id='cloud'>
       <button>Get the Code</button>
-    </div>
+    </div></a>
     <h1>
       Test your JavaScript automatically.
     </h1>
     <span>
-      We harness the power of type annotations and program specifications to make your code robust. It's <em>easy</em> to get started.
+      Harness the power of type annotations and program specifications to make your code robust. It's easy to get started.
     </span>
   </div>
 </div>
