--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@ title: Home
     </div>
     <div class='clear'></div>
     <div class='full'>
+      <h1>Why not give it a try in this window?</h1>
+      <p> Open your console and type: <strong>TypedJS.run_tests()</strong></p>
+    
+      
+    </div>
+    <div class='clear'></div>
+  </div>
+  <div class='sec'>
+    <h1>
+      <span class='num'>3.</span>
+      Find some bugs (but probably not all of them)
+    </h1>
+    <div class='full'>
       <h1>Type signatures specify program correctness</h1>
       <p>
         <span='prox'>TYPED<span class="red">JS</span></span>
@@ -67,8 +80,8 @@ title: Home
         <em>a limited form</em>
         of program specification,
         <span='prox'>TYPED<span class="red">JS</span></span>
-        adds a quick and rigorous sanity check to your deployment pipeline.
-      </p>
+        adds a quick and rigorous sanity check to your deployment pipeline. The code lives on <a href="http://github.com/Proxino/TypedJS">github</a>. It's free for non-commercial use.
+      </p>      
     </div>
     <div class='clear'></div>
   </div>
