--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
       <button>Get the Code</button>
     </div></a>
     <h1>
-      Test your JavaScript automatically.
+      Sanity Check your Javascript.
     </h1>
     <span>
       Harness the power of type annotations and program specifications to make your code robust. It's easy to get started.
