--- a/index.html
+++ b/index.html
@@ -86,3 +86,9 @@ title: Home
     <div class='clear'></div>
   </div>
 </div>
+
+Hey guys, if you don't do any JavaScript testing, you may be interested in an open source project Proxino just released:
+
+http://typedjs.com
+
+Pretty basic feature set at the moment, but fans of Haskell may like it ;-) Just posted it in ycstories.
