--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ title: Home
         <em>a limited form</em>
         of program specification,
         <span='prox'>TYPED<span class="red">JS</span></span>
-        adds a quick and rigorous sanity check to your deployment pipeline. The code lives on <a href="http://github.com/Proxino/TypedJS">github</a>. It's free for non-commercial use.
+        adds a quick and rigorous sanity check to your deployment pipeline. The code lives on <a href="http://github.com/Proxino/TypedJS">github</a>.
       </p>      
     </div>
     <div class='clear'></div>
